@@ -40,6 +40,10 @@
 <p>2023-01-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li><p>coders/png.c (WriteOnePNGImage): Use lower-case raw profile
+identifiers (e.g. 'Raw profile type xmp') because exiftool expects
+that.  Partially addresses concerns raised by SourceForge bug #682
+&quot;Invalid storage of XMP in PNGs&quot;.</p></li>
 <li><p>www/INSTALL-unix.rst: Add notes about required libjxl versions.</p></li>
 <li><p>README.txt: Add notes about required libjxl versions.</p></li>
 </ul>
